Refactor plan proposal services for constructors
