# services/constructor/src/api/api.yaml
@@ -138,9 +138,9 @@ paths:
           application/json:
             schema:
               $ref: '#/components/schemas/ProjectStatus'
-            example:
+            example: 
               status: IN_PROGRESS
-  '/projects/{projectId}/planProposals':
+  '/projects/{projectId}/planProposal':
     post:
       summary: ''
       parameters:
@@ -189,6 +189,56 @@ paths:
                 description: Walls construction
                 startDateTime: '2023-04-20T09:00:00.000Z'
                 endDateTime: '2023-04-20T17:00:00.000Z'
+    delete:
+      summary: ''
+      parameters:
+        - schema:
+            type: string
+          example: "1"
+          name: projectId
+          in: path
+          required: true
+      tags:
+        - project
+      operationId: deletePlanProposal
+      responses:
+        '200':
+          description: OK
+        '500':
+          description: Internal Server Error
+  '/projects/{projectId}/planProposal/confirmation':
+    put:
+      summary: ''
+      parameters:
+        - schema:
+            type: string
+          example: "1"
+          name: projectId
+          in: path
+          required: true
+      tags:
+        - project
+      operationId: updatePlanProposalConfirmation
+      responses:
+        '200':
+          description: OK
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                type: string
+        '404':
+          description: Not Found
+        '500':
+          description: Internal Server Error
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PlanConfirmation'
+            example: 
+              status: CONFIRMED
   '/projects/{projectId}/jobs':
     get:
       summary: ''
@@ -365,12 +415,12 @@ components:
           type: object
           required:
             - projectStatus
-            - planProposals
+            - planProposal
           properties:
             projectStatus:
               type: string
               format: uri
-            planProposals:
+            planProposal:
               type: string
               format: uri
           readOnly: true
@@ -496,12 +546,28 @@ components:
         links:
           type: object
           properties:
-            planProposals:
+            planProposal:
               type: string
-              format: uri
+              format: uri        
+          readOnly: true
+      required:
+        - status
+    PlanConfirmation:
+      title: PlanConfirmation
+      type: object
+      properties:
+        status:
+          type: string
+          enum:
+            - CONFIRMED
+            - PENDING
+        links:
+          type: object
+          properties:
             jobs:
               type: string
               format: uri            
           readOnly: true
       required:
         - status
+
