# services/constructor/src/controllers/projectsprojectIdplanProposalconfirmationController.js
@@ -1,0 +1,6 @@
+const service = require('../services/projectsprojectIdplanProposalconfirmationService.js');
+
+module.exports.updatePlanProposalConfirmation = function updatePlanProposalConfirmation(req, res) {
+    service.updatePlanProposalConfirmation(req, res);
+}
+
