# services/constructor/src/services/projectsService.js
@@ -34,7 +34,7 @@ module.exports.registerProject = function registerProject(req, res) {
             id: generatedProjId,
             status: "NOT_STARTED"
         },
-        planProposals: [],
+        planProposal: {},
         jobs: []
     }
 
@@ -43,7 +43,7 @@ module.exports.registerProject = function registerProject(req, res) {
         id: generatedProjId,
         links: {
             projectStatus: `${__baseUrl}/projects/${generatedProjId}/status`,
-            planProposals: `${__baseUrl}/projects/${generatedProjId}/planProposals`
+            planProposal: `${__baseUrl}/projects/${generatedProjId}/planProposal`
         }
     });
 }
